# shallow_spectral

./: CMakeLists.txt  Readme.txt
doc/: description.docx  description.txt
lib/: CMakeLists.txt  README  adquad.f  fft99f.f  ncarg.f  netcdf.f
run/: CMakeCache.txt  Makefile  cmake_install.cmake  exp.0005  stdout.exp.05
run/lib/: Makefile  cmake_install.cmake
src/: Makefile  advect.f  agpwrt.f  anlytc.f  bf2.f  bubfnc.f  calp.f  case4.i  ceps.f  comp1.f  complt.i  consts.i  cpcnrc.f  cpmpxy.f  cpmvxy.f  d2bubf.f  dbubf.f  dcalp.f  dceps.f  dft991.f  dftfax.f  drawcl.f  dtrns.f  duv.f  epslon.f  erranl.f  eval.f  finit.i  force.f  ftrnde.f  ftrndi.f  ftrnex.f  ftrnim.f  ftrnpe.f  ftrnpi.f  ftrnve.f  fu.f  func2.f  glat.f  glats.f  (+29 more)
src/test_cases/test1/: README  cray.sh  exp.0001  stderr.0001  sun.sh
src/test_cases/test2/: README  cray.sh  exp.0002  stderr.0002  stdout.0002  sun.sh
src/test_cases/test3/: README  cray.sh  exp.0003  stdout.0003  sun.sh
src/test_cases/test4/: README  cray.sh  exp.0004  stdout.0004  sun.sh
src/test_cases/test5/: README  cray.sh  exp.0005  stdout.0005  sun.sh
src/test_cases/test6/: README  cray.sh  exp.0006  stdout.0006  sun.sh
src/test_cases/test7/: README  cray.sh  exp.0007  stderr.0007  stdout.0007  sun.sh
